Removed all terminal output from library, changed readme file